Boatload of changes, most of linting, added tests in frontend and backend, sending commands to physical devices, simulation of network latency and packet loss.